--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Vault</title>
     <link rel="stylesheet" href="../css/styles.css">
-   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <header>
@@ -30,8 +30,8 @@
     <section id="movie-list"></section>
 
     <div class="pagination">
-        <button id="prevPage">Previous</button>
-        <button id="nextPage">Next</button>
+        <button id="prevPage" onclick="prevPage()">Previous</button>
+        <button id="nextPage" onclick="nextPage()">Next</button>
     </div>
 
     <footer>
@@ -42,5 +42,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </footer>
+
+    <script src="../js/script.js"></script>
 </body>
 </html>
