--- a/movie.html
+++ b/movie.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Details</title>
     <link rel="stylesheet" href="../css/styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <header>
@@ -18,5 +17,7 @@
     <footer>
         <p>&copy; 2025 Movie Vault. All Rights Reserved.</p>
     </footer>
+
+    <script src="../js/movie.js"></script>
 </body>
 </html>
