--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </header>
 
     <div class="categories">
-        <div class="category-box">Hollywood</div>
-        <div class="category-box">Bollywood</div>
-        <div class="category-box">South Indian Dubbed</div>
-        <div class="category-box">Join Telegram</div>
+        <div class="category-box" data-category="Hollywood">Hollywood</div>
+        <div class="category-box" data-category="Bollywood">Bollywood</div>
+        <div class="category-box" data-category="South Indian Dubbed">South Indian Dubbed</div>
+        <div class="category-box" data-category="Join Telegram">Join Telegram</div>
     </div>
 
     <div class="notice-box">
@@ -30,8 +30,8 @@
     <section id="movie-list"></section>
 
     <div class="pagination">
-        <button id="prevPage" onclick="prevPage()">Previous</button>
-        <button id="nextPage" onclick="nextPage()">Next</button>
+        <button id="prevPage">Previous</button>
+        <button id="nextPage">Next</button>
     </div>
 
     <footer>
@@ -43,6 +43,15 @@
         </nav>
     </footer>
 
+    <script>
+        // Prevent asset download and right-click
+        document.addEventListener("contextmenu", (e) => e.preventDefault());
+        document.addEventListener("keydown", (e) => {
+            if (e.ctrlKey && (e.key === "s" || e.key === "u" || e.key === "p" || e.key === "c")) {
+                e.preventDefault();
+            }
+        });   
+    </script>
     <script src="../js/script.js"></script>
 </body>
 </html>
