--- a/index.html
+++ b/index.html
@@ -3,35 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Vault</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <title>MoviesVault HQ</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
-<body>
-    <header>
-        <img src="../public/logo.png" alt="Movie Vault Logo" class="logo">
+<body oncontextmenu="return false;">
+    <div class="container">
+        <img src="logo.png" alt="Movie Vault Logo" class="logo">
         <div class="search-bar">
-            <input type="text" id="searchInput" placeholder="Search movies..." oninput="searchMovies()">
+            <input type="text" id="search" placeholder="Search movies..." oninput="searchMovies()">
             <button onclick="searchMovies()">Search</button>
         </div>
-    </header>
-
-    <div class="categories">
-        <div class="category-box" data-category="Hollywood">Hollywood</div>
-        <div class="category-box" data-category="Bollywood">Bollywood</div>
-        <div class="category-box" data-category="South Indian Dubbed">South Indian Dubbed</div>
-        <div class="category-box" data-category="Join Telegram">Join Telegram</div>
-    </div>
-
-    <div class="notice-box">
-        <p>⚠ Important Notices Will Appear Here</p>
-    </div>
-
-    <section id="movie-list"></section>
-
-    <div class="pagination">
-        <button id="prevPage">Previous</button>
-        <button id="nextPage">Next</button>
+        <div class="categories">
+            <div class="category" onclick="fetchMovies('all')">All</div>
+            <div class="category" onclick="fetchMovies('hollywood')">Hollywood</div>
+            <div class="category" onclick="fetchMovies('bollywood')">Bollywood</div>
+            <div class="category" onclick="fetchMovies('south')">South Indian Dubbed</div>
+        </div>
+        <div class="movies" id="movieList"></div>
     </div>
 
     <footer>
@@ -42,16 +31,5 @@
             <a href="contact.html">Contact</a>
         </nav>
     </footer>
-
-    <script>
-        // Prevent asset download and right-click
-        document.addEventListener("contextmenu", (e) => e.preventDefault());
-        document.addEventListener("keydown", (e) => {
-            if (e.ctrlKey && (e.key === "s" || e.key === "u" || e.key === "p" || e.key === "c")) {
-                e.preventDefault();
-            }
-        });   
-    </script>
-    <script src="../js/script.js"></script>
 </body>
 </html>
